opam-version: "1.2"
name: "opaca"
version: "0.1"
authors: "Mia Kathage"
maintainer: "Mia Kathage"
homepage: "https://github.com/spreadLink/opaca"
bug-reports: "https://github.com/spreadLink/opaca/issues"
dev-repo: "https://github.com/spreadLink/opaca.git"
license: "MIT License"
build: ["jbuilder" "build"]
depends: [
  "ocamlfind" {build}
  "jbuilder" {build}
  "topkg" {build}
]